fix: horizontal scroll

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 
 body {
     margin-left: 0;
+    margin: 0;
 }
 
 .menup {
@@ -1255,7 +1256,6 @@ input::-webkit-input-placeholder {
             margin-top: 32px;
         }
 
-       
 
         .projdetail, .name, .email, .subject {
             width: 80.1vw;
